tests/errors/err-lddw-second-half-invalid-src.data
-- raw
0x0000000000000018
0x0000000000001000
0x0000000000000095
-- error
Failed to load code: invalid lddw second half at PC 1
